# nitrogen-purging

./: .gitignore  Book2.csv  Dockerfile  README.md  main.py  notebook.ipynb  predict.py  pyproject.toml  requirements.txt  serve.py  train.py
